fuel-indexer-macros/test_data/fail_self.stderr
error: `self` argument not allowed in handler function.
 --> test_data/fail_self.rs:4:1
  |
4 | / #[indexer(
5 | |     abi = "./test_data/contracts-abi.json",
6 | |     namespace = "test_namespace",
7 | |     schema = "./test_data/schema.graphql",
8 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `indexer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> test_data/fail_self.rs:16:2
   |
16 | }
   |  ^ consider adding a `main` function to `$DIR/test_data/fail_self.rs`
